<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/secondary_layout"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/textViewAddNewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_new_profile"
                android:onClick="btnAddNew"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile_title"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/txtViewName"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="55dp" />

                <EditText
                    android:id="@+id/edtName"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginLeft="50dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/txtViewAge"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="73dp"
                    android:layout_marginRight="5dp" />

                <EditText
                    android:id="@+id/edtAge"
                    android:visibility="visible"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginLeft="68dp" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="years"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/txtViewGender"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="45dp" />

                <RadioGroup
                    android:id="@+id/radioGender"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="40dp">

                    <RadioButton
                        android:id="@+id/radioBtnMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/radioBtnFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="Female" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtBloodGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_group"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtViewBloodGroup"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="AB+"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp" />

                <Spinner
                    android:id="@+id/spinnerBloodGroup"
                    android:visibility="visible"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/blood_group_array"
                    android:prompt="@string/blood_group_prompt"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/txtViewHeight"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="51dp"
                    android:layout_marginRight="5dp" />

                <EditText
                    android:id="@+id/edtHeight"
                    android:visibility="visible"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_marginLeft="46dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ft"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/txtViewWeight"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="5dp" />

                <EditText
                    android:id="@+id/edtWeight"
                    android:visibility="visible"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_marginLeft="43dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="kg"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="visible"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_no"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/txtViewPhone"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="23dp" />

                <EditText
                    android:id="@+id/edtPhoneNo"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginLeft="23dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="addProfile"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="editProfile"
                    android:text="@string/edit_profile"
                    android:visibility="gone" />
                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="updateProfile"
                    android:text="@string/update"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="cancelProfile"
                    android:text="@string/cancel"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>